--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:c="clr-namespace:VpdbAgent.Controls"
         xmlns:rx="clr-namespace:ReactiveUI;assembly=ReactiveUI"
         xmlns:vm="clr-namespace:VpdbAgent.ViewModels"
+        xmlns:tb="http://www.hardcodet.net/taskbar"
         mc:Ignorable="d"
         ResizeMode="CanResizeWithGrip"
         WindowTitleBrush="{DynamicResource TransparentBrush}"
