--- a/Styles/Icons.xaml
+++ b/Styles/Icons.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:clr="clr-namespace:System;assembly=mscorlib">
+                    xmlns:clr="clr-namespace:System;assembly=mscorlib"
+                    xmlns:tb="http://www.hardcodet.net/taskbar">
 
     <clr:String x:Key="IconCheck">F1 M 20.944,39.694 L 5.306,24.056 L -0.000,29.362 L 20.944,50.306 L 65.944,5.306 L 60.637,0.000 L 20.944,39.694 Z</clr:String>
     <clr:String x:Key="IconCheckCircle">F1 M 29.721,54.852 L 11.770,36.901 L 16.850,31.821 L 29.721,44.692 L 56.952,17.461 L 62.032,22.541 L 29.721,54.852 Z M 35.901,0.000 C 16.066,0.000 -0.000,16.066 -0.000,35.901 C -0.000,55.719 16.066,71.803 35.901,71.803 C 55.719,71.803 71.803,55.719 71.803,35.901 C 71.803,16.066 55.719,0.000 35.901,0.000 Z</clr:String>
