Added icons to download items.

--- a/views/Downloads/DownloadItemView.xaml
+++ b/views/Downloads/DownloadItemView.xaml
@@ -35,8 +35,7 @@
             Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="50" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <!-- data -->
-        <TextBlock Style="{StaticResource Label}" TextTrimming="CharacterEllipsis" 
-                    Grid.Column="1" Grid.Row="0">
+        <TextBlock Style="{StaticResource Label}" Grid.Column="1" Grid.Row="0">
             <TextBlock.Inlines>
                 <Run Text="{Binding Job.Release.Game.Title}" FontWeight="Bold"/>
                 <Run Text=" – "/>
@@ -44,8 +43,16 @@
                 <Run Text="{Binding Job.Version.Name}"/>
             </TextBlock.Inlines>
         </TextBlock>
-        <TextBlock Text="{Binding Job.FileName}" Style="{StaticResource Label}" TextTrimming="CharacterEllipsis" 
-                   Grid.Column="1" Grid.Row="1"/>
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <c:IconControl Margin="0,0,8,0" Height="{Binding FileIconSize}" Width="{Binding FileIconSize}" Grid.Column="0"
+                HorizontalAlignment="Right" VerticalAlignment="Center"
+                Foreground="{DynamicResource LabelTextBrush}" Data="{Binding FileIcon}" />
+            <TextBlock Text="{Binding Job.FileName}" Style="{StaticResource Label}" Grid.Column="1" />
+        </Grid>
 
         <!-- right side -->
         <Label Content="{Binding Path=DownloadSpeedFormatted}" Padding="0" HorizontalAlignment="Right" 
