--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -13,12 +13,16 @@
              d:DataContext="{d:DesignInstance Type=vm:MainViewModel}">
 
     <DockPanel LastChildFill="True">
+        
+        <!-- status bar -->
         <DockPanel DockPanel.Dock="Bottom" Margin="7,-5,15,7">
             <TextBlock x:Name="AppVersion" DockPanel.Dock="Left" Style="{StaticResource Label}" 
                        Text="Status info. All green." FontSize="12" />
             <TextBlock x:Name="LoginStatus" DockPanel.Dock="Right" Style="{StaticResource Label}" 
                        Text="Not logged." TextAlignment="Right" FontSize="12"/>
         </DockPanel>
+        
+        <!-- update notice -->
         <DockPanel x:Name="UpdateNotice" DockPanel.Dock="Bottom" Margin="0,5,0,10" Background="{StaticResource PrimaryColorBrush}">
             <c:IconControl Height="14" Width="14" Foreground="{StaticResource WhiteBrush}" Data="{StaticResource IconStar}" Margin="10,0,10,0" VerticalAlignment="Center"/>
             <TextBlock FontSize="16" DockPanel.Dock="Left" Style="{StaticResource Label}" Foreground="{StaticResource WhiteBrush}" VerticalAlignment="Center" Margin="0,-1,0,0">
@@ -31,6 +35,7 @@
             </Button>
         </DockPanel>
         
+        <!-- main window -->
         <DockPanel Margin="7" >
             <Grid>
                 <TabControl>
