--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -45,9 +45,9 @@
                     <TabItem Header="Downloads">
                         <rx:ViewModelViewHost x:Name="DownloadsContent" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
                     </TabItem>
-                    <TabItem Header="Messages">
+                    <!--TabItem Header="Messages">
                         <rx:ViewModelViewHost x:Name="MessagesContent" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
-                    </TabItem>
+                    </-->
                 </TabControl>
                 <Button x:Name="GotoSettings" Style="{StaticResource IconButton}" Foreground="{StaticResource LabelTextBrush}"
                         Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,12,0,0">
