--- a/views/Messages/MessageItemView.xaml
+++ b/views/Messages/MessageItemView.xaml
@@ -7,7 +7,7 @@
              xmlns:typeConverters="clr-namespace:VpdbAgent.Common.TypeConverters"
              xmlns:vm="clr-namespace:VpdbAgent.ViewModels.Messages"
              mc:Ignorable="d" 
-             d:DesignHeight="150"
+             d:DesignHeight="50"
              d:DesignWidth="900"
              d:DataContext="{d:DesignInstance Type=vm:MessageItemViewModel}">
 
@@ -21,14 +21,25 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <c:RichTextBlock InlineList="{Binding TextLabel}" Style="{StaticResource Label}" Grid.Column="0" Grid.Row="0" TextWrapping="Wrap" />
+        <!-- icon -->
+        <c:IconControl Foreground="{DynamicResource LabelTextBrush}" Data="{Binding Icon}"
+                       Grid.Column="0" Grid.Row="0" Height="18" Width="18" 
+                       HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,5,15,0" />
+
+        <!-- message -->
+        <c:RichTextBlock InlineList="{Binding TextLabel}" Style="{StaticResource Label}" 
+                         Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" />
+        
+        <!-- time -->
+        <Label Content="{Binding CreatedAt}" FontStyle="Italic"
+                Grid.Column="2" Grid.Row="0" Margin="0,-5,0,0"/>
 
     </Grid>
-
 </UserControl>
