Added read status to messages list.

--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -45,7 +45,7 @@
                     <TabItem Header="Downloads">
                         <rx:ViewModelViewHost x:Name="DownloadsContent" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
                     </TabItem>
-                    <TabItem Header="Messages">
+                    <TabItem Header="Messages" Selector.Unselected="OnMessagesUnselected">
                         <rx:ViewModelViewHost x:Name="MessagesContent" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
                     </TabItem>
                 </TabControl>
