--- a/views/Messages/MessageItemView.xaml
+++ b/views/Messages/MessageItemView.xaml
@@ -13,10 +13,12 @@
     <!-- type converters -->
     <UserControl.Resources>
         <typeConverters:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
+        <typeConverters:BooleanToVisibilityConverter x:Key="TrueToCollapsed" True="Collapsed" False="Visible" />
     </UserControl.Resources>
 
-    <Grid Margin="20,20,20,-5">
+    <Grid Margin="15,20,20,-5">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto" />
@@ -28,22 +30,25 @@
 
         <!-- icon -->
         <c:IconControl Data="{Binding Icon}" Foreground="{Binding Foreground}"
-                       Grid.Column="0" Grid.Row="0" Height="18" Width="18" 
+                       Grid.Column="1" Grid.Row="0" Height="18" Width="18" 
                        HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,5,15,0" />
 
         <!-- message -->
         <c:RichTextBlock InlineList="{Binding TextLabel}" Style="{StaticResource Label}" Foreground="{Binding Foreground}"
-                         Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" />
+                         Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" />
         
         <!-- time -->
         <Label Content="{Binding CreatedAt}" FontStyle="Italic" Foreground="{Binding Foreground}"
-                Grid.Column="2" Grid.Row="0" Margin="0,-5,0,0"/>
+                Grid.Column="3" Grid.Row="0" Margin="0,-5,0,0"/>
 
         <!-- error message -->
         <c:RichTextBlock InlineList="{Binding ErrorLabel}" Style="{StaticResource Label}" 
                          Foreground="{Binding Foreground}" Visibility="{Binding Path=ShowError, Converter={StaticResource TrueToVisible}}"
-                         Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="Wrap" />
+                         Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="Wrap" />
 
-
+        <!-- unread indicator -->
+        <Rectangle Fill="{StaticResource PrimaryColor50Brush}" Visibility="{Binding Path=Message.WasRead, Converter={StaticResource TrueToCollapsed}}"
+                   Width="5" Margin="-30,0,0,0" 
+                   Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
     </Grid>
 </UserControl>
